# timetable

./: .gitignore  OLD_timetable_100100.json  example_timetable_1.json  example_timetable_2.json  main.py  timetable.json  timetable.schema.json  timetable2_100100.json  timetable_100100.json  timetable_100101.json
dioxus_timetable/: Cargo.toml  Dioxus.toml  flake.nix  hotdog.db  storage.json  timetable_100101.json  timetable_250047.json  timetable_250485.json  timetable_kw.json
dioxus_timetable/assets/: ctp.scss  main.scss  reset.scss  root.scss  tailwind.css
dioxus_timetable/assets/components/: navbar.scss
dioxus_timetable/assets/pages/: noTimetable.scss  pages.scss  settings.scss  timetable.scss
dioxus_timetable/src/: backend.rs  main.rs  types.rs
dioxus_timetable/src/components/: favourites.rs  mod.rs  nav.rs  navbar.rs
dioxus_timetable/src/mobile_storage/: lib.rs  mod.rs  path.rs
dioxus_timetable/src/pages/: mod.rs  no_timetable.rs  settings.rs  timetable.rs
siteDemo/: package.json
siteDemo/app/: app.css
siteDemo/app/routes/: home.module.scss  home.tsx
siteDemo/lib/: lib.ts
