[package]
name = "timetable"
version = "0.1.0"
authors = ["Ayaan <ayaan.waqas@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
rand = { version = "0.9.2", features = ["small_rng"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
serde = "1.0.228"
serde_json = "1.0.145"
wasm-bindgen = { version = "=0.2.104", features = [] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
